@@ -1,4 +1,3 @@
-apply plugin: 'org.xtext.xtend'
 apply plugin: 'war'
 apply plugin: 'org.akhikhl.gretty'
 apply plugin: 'java-library'
@@ -27,7 +26,6 @@ buildscript {
   }
 
     dependencies {
-      	classpath 'org.xtext:xtext-gradle-plugin:1.0.19'
       	classpath 'org.akhikhl.gretty:gretty:+'
 		classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1'
     }
@@ -45,11 +43,7 @@ dependencies {
   
   // explorviz-kieker-adapter
   compile project(':explorviz-backend-kiekeradapter')
-  
-  // Xtend
-  compile 'org.eclipse.xtend:org.eclipse.xtend.lib:2.9.0'
-  compile 'org.eclipse.xtext:org.eclipse.xtext.xbase.lib:2.8.0'
-  
+    
   // Jersey and Servlet
   compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version:'2.26'
   compile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1'
@@ -161,4 +155,6 @@ gretty {
   	reloadOnClassChange = false
   	reloadOnConfigChange = false
   	reloadOnLibChange = false
+	// debugging JVM GC - for http://gceasy.io/
+	// jvmArgs = [ '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps', '-Xloggc:gc_jvm.log' ]
 }
